--- a/SeoulJesusLoveChurch/css/cssReset_2.0.css
+++ b/SeoulJesusLoveChurch/css/cssReset_2.0.css
@@ -13,7 +13,7 @@ summary, time, mark, audio, video {
   padding: 0;
   border: 0;
   outline: 0;
-  font-size: 100%;
+  font-size: 100%; /* 1em : 16px */
   vertical-align: baseline;
   background: transparent;
 }
